[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 884.0
margin_top = 42.0
margin_right = 924.0
margin_bottom = 82.0
rect_scale = Vector2( 1.60148, 1.60148 )

[node name="MenuButton" type="Button" parent="Control"]
margin_right = 12.0
margin_bottom = 20.0
disabled = true
text = "Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 632.0
margin_top = 266.0
margin_right = 714.0
margin_bottom = 334.0
rect_scale = Vector2( 2.14312, 2.14312 )

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
margin_right = 82.0
margin_bottom = 20.0
disabled = true
text = "Continue"

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
text = "New Game"

[node name="AuthorsButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 82.0
margin_bottom = 68.0
text = "Info"

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 273.0
margin_top = 67.0
margin_right = 573.0
margin_bottom = 442.0
text = "This game was made in order to create
a platformer with procedural
world generation. I hope I will use
these developments in my future games :-)

Music for enjoying the game:

https://youtu.be/PZtLfvoL5HQ


Development: Terminator, aka fresh-ter

Help with publishing: Pashtet, aka drxwat

Art by Kenney (www.kenney.nl)

(c) 2022"
readonly = true
virtual_keyboard_enabled = false

[connection signal="pressed" from="Control/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AuthorsButton" to="." method="_on_AuthorsButton_pressed"]
